--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -28,7 +28,7 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_family JetBrainsMono Nerd Font Mono
+font_family JetBrains Mono
 font_size 10.5
 
 #: Font size (in pts)
