--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -169,23 +169,17 @@ bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
 
-# alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
-
 # move focused window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
+bindsym $mod+Left move left
+bindsym $mod+Down move down
+bindsym $mod+Up move up
+bindsym $mod+Right move right
 
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+# Resize window with keys (or use mod+right mouse button)
+bindsym $mod+Shift+h resize shrink width 5 px
+bindsym $mod+Shift+j resize shrink height 5 px
+bindsym $mod+Shift+k resize grow height 5 px
+bindsym $mod+Shift+l resize grow width 5 px
 
 # split in horizontal orientation
 bindsym $mod+Shift+v split h
