--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,11 +6,6 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      monospace
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
-
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
 #: +list-fonts` command. By default they are derived automatically, by
@@ -19,19 +14,22 @@
 #: heavy. Setting them manually is useful for font families that have
 #: many weight variants like Book, Medium, Thick, etc. For example::
 
-
-# font_family JetBrains Mono Nerd Font Mono
-# font_family DejaVu Sans Mono
-
 #:     font_family      Operator Mono Book
 #:     bold_font        Operator Mono Medium
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_family JetBrains Mono
-font_size 10.5
+font_family      monospace
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+
+# font_family JetBrains Mono Nerd Font Mono
+font_family DejaVu Sans Mono
+# font_family JetBrains Mono Nerd
 
 #: Font size (in pts)
+font_size 10.5
 
 # force_ltr no
 
@@ -1021,7 +1019,7 @@ enable_audio_bell no
 
 #: The foreground and background colors.
 
-# background_opacity 1.0
+background_opacity 0.8
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
