Start Waybar when Hyprland is started

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -17,7 +17,7 @@ monitor=,preferred,auto,auto
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
-# exec-once = waybar
+exec-once = ~/.config/waybar/launch.sh
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -127,6 +127,7 @@ bind = $mainMod, E, exec, dolphin
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, X, togglesplit, # dwindle
+bind = $mainMod, B, exec, ~/.config/waybar/launch.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
