--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -18,6 +18,7 @@ monitor=,preferred,auto,auto
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
 exec-once = ~/.config/waybar/launch.sh
+exec-once = hyprpaper
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -51,7 +52,7 @@ general {
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
 
-    layout = dwindle
+    layout = master
 }
 
 decoration {
@@ -94,7 +95,9 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    new_is_master = false
+    orientation = center
+    allow_small_split = false
 }
 
 gestures {
@@ -118,7 +121,7 @@ device:epic-mouse-v1 {
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+# Binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod, SPACE, exec, wofi --show drun
 bind = $mainMod, Q, killactive,
@@ -128,6 +131,14 @@ bind = $mainMod, F, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, X, togglesplit, # dwindle
 bind = $mainMod, B, exec, ~/.config/waybar/launch.sh
+
+# Master or Dwindle layout
+bind = $mainMod, M, exec, hyprctl keyword general:layout "master"
+bind = $mainMod SHIFT, M, exec, hyprctl keyword general:layout "dwindle"
+bind = $mainMod, A, layoutmsg, preselect r
+bind = $mainMod, C, layoutmsg, orientationcenter
+bind = $mainMod, S, layoutmsg, mfact 0.33
+
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
