Updates in the neovim configuration
* Icons for neotree (corrections)
* Removed leap plugin
* Minor updates in telescope settings

--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,2 +1,3 @@
 preload = /home/jens/wallpapers/krgq9kqlgbk71.png
-wallpaper = ,/home/jens/wallpapers/krgq9kqlgbk71.png
+preload = /home/jens/wallpapers/firewatch.png
+wallpaper = ,/home/jens/wallpapers/firewatch.png
