--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -45,12 +45,12 @@ input {
 
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     gaps_in = 5
     gaps_out = 10
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
+    resize_on_border = true
 
     layout = master
 }
@@ -98,6 +98,7 @@ master {
     new_is_master = false
     orientation = center
     allow_small_split = false
+    always_center_master = true
 }
 
 gestures {
@@ -106,9 +107,16 @@ gestures {
 }
 
 # Example per-device config
+# Use hyprctl devices for list of devices
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
 device:epic-mouse-v1 {
     sensitivity = -0.5
+}
+
+# See https://wiki.hyprland.org/hyprland-wiki/pages/Configuring/Variables/#input
+# for parameters
+device:logitech-wireless-mouse-mx-master-3-1 {
+    sensitivity = -0.7
 }
 
 # Example windowrule v1
@@ -138,6 +146,7 @@ bind = $mainMod SHIFT, M, exec, hyprctl keyword general:layout "dwindle"
 bind = $mainMod, A, layoutmsg, preselect r
 bind = $mainMod, C, layoutmsg, orientationcenter
 bind = $mainMod, S, layoutmsg, mfact 0.33
+bind = $mainMod SHIFT, S, layoutmsg, mfact 0.55
 
 
 # Move focus with mainMod + arrow keys
