Update git config and rg config reference
Add marksman LSP server to neovim config

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -2,7 +2,7 @@
 	name = Blue Zephyr
 	email = blue.zephyr.git@gmail.com
 
-[includeIf "gitdir:~/repos/**"]
+[includeIf "gitdir:~/repos/work/t/**"]
 	path = config-t
 
 [core]
