--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -23,8 +23,9 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-# Catppuccin Theme
+# Catppuccin Theme (latte, frappe, macchiato, or mocha)
 set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour 'mocha'
 
 # Set vi-mode
 set-window-option -g mode-keys vi
@@ -37,6 +38,5 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 # Open panes in current directory
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
-
 
 run '~/.tmux/plugins/tpm/tpm'
