Tmux: Add 'ctrl-space =' to resize even horizontally

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -43,4 +43,6 @@ bind-key "|" split-window -fh -c "#{pane_current_path}"
 bind-key "-" split-window -v -c "#{pane_current_path}"
 bind-key "_" split-window -fv -c "#{pane_current_path}"
 
+bind-key "=" select-layout even-horizontal
+
 run '~/.tmux/plugins/tpm/tpm'
