--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -11,6 +11,8 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
+#monitor=eDP-1, 1920x1080@60, 0x0, 1
+#monitor=,      3440x1440@60, 1920x-360, 1
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
