Add workaround for mouse bug in Hyprland/Wayland

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -40,6 +40,13 @@ input {
     sensitivity = -0.5 # -1.0 - 1.0, 0 means no modification.
 }
 
+# There seems to be a bug related to Bluez and the Mx3 mouse under wayland. See
+# https://bbs.archlinux.org/viewtopic.php?id=293772 for more information.
+# Restaring Bluetooth seems to be a workaround:
+#
+# ❯ sudo systemctl restart bluetooth
+#
+
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     gaps_in = 5
@@ -70,6 +77,7 @@ decoration {
 }
 
 animations {
+
     enabled = yes
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
@@ -113,7 +121,7 @@ gestures {
 # See https://wiki.hyprland.org/hyprland-wiki/pages/Configuring/Variables/#input
 # for parameters
 # device:logitech-wireless-mouse-mx-master-3-1 {
-#     sensitivity = -0.7
+    # sensitivity = -0.7
 # }
 
 # Example windowrule v1
