Add clipboard support to hyprland config

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -5,9 +5,10 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
-#monitor=eDP-1, 1920x1080@60, 0x0, 1
+# monitor=,preferred,auto,auto
 #monitor=,      3440x1440@60, 1920x-360, 1
+monitor=,preferred,auto,1
+monitor=eDP-1, 1920x1080@60, 0x0, 1
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -22,6 +23,14 @@ exec-once = hyprpaper
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
+
+# Clipboard using `cliphist`
+# Install using `yay cliphist`
+# https://wiki.hyprland.org/Useful-Utilities/Clipboard-Managers/
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
+
+# Add wofi shortcut - see binds below
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -153,6 +162,8 @@ bind = $mainMod, C, layoutmsg, orientationcenter
 bind = $mainMod, S, layoutmsg, mfact 0.33
 bind = $mainMod SHIFT, S, layoutmsg, mfact 0.55
 
+# Clipboard
+bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
