Add keymap in i3 to focus child window

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -205,6 +205,9 @@ bindsym $mod+Shift+space floating toggle
 # focus the parent container
 bindsym $mod+a focus parent
 
+# focus the child
+bindsym $mod+Shift+a focus child
+
 # open new empty workspace
 bindsym $mod+Shift+n exec ~/.config/i3/scripts/empty_workspace
 
