--- a/autorandr/.config/autorandr/ultrawide/config
+++ b/autorandr/.config/autorandr/ultrawide/config
@@ -1,3 +1,5 @@
+output eDP-1
+off
 output HDMI-1
 off
 output DP-2
@@ -9,7 +11,7 @@ off
 output DP-1
 crtc 0
 mode 3440x1440
-pos 1920x0
+pos 0x0
 primary
 rate 59.97
 x-prop-audio auto
@@ -17,13 +19,3 @@ x-prop-broadcast_rgb Automatic
 x-prop-colorspace Default
 x-prop-max_bpc 12
 x-prop-non_desktop 0
-output eDP-1
-crtc 1
-mode 1920x1080
-pos 0x360
-rate 60.00
-x-prop-broadcast_rgb Automatic
-x-prop-colorspace Default
-x-prop-max_bpc 12
-x-prop-non_desktop 0
-x-prop-scaling_mode Full aspect
