--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -111,7 +111,7 @@ bindsym $mod+x move workspace to output next
 ######################################
 
 # start a terminal
-bindsym $mod+Return exec kitty
+bindsym $mod+Return exec kitty tmux
 
 # kill focused window
 bindsym $mod+q kill
