--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -40,6 +40,10 @@ line-size = 3pt
 border-size = 4pt
 border-color = #00000000
 
+override-redirect = false
+border-bottom-size = 0pt
+wm-restack = i3
+
 padding-left = 0
 padding-right = 1
 
@@ -58,11 +62,6 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
-; wm-restack = generic
-; wm-restack = bspwm
-; wm-restack = i3
-
-; override-redirect = true
 
 [module/systray]
 type = internal/tray
