Add battery information to i3 polybar

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -55,7 +55,7 @@ separator-foreground = ${colors.disabled}
 font-0 = Noto Sans Regular:size=11;2
 
 modules-left = xworkspaces xwindow
-modules-right = systray pulseaudio xkeyboard filesystem memory cpu wlan eth date
+modules-right = systray pulseaudio xkeyboard filesystem memory cpu battery wlan eth date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -164,6 +164,17 @@ date-alt = %Y-%m-%d %H:%M:%S
 
 label = %date%
 label-foreground = ${colors.primary}
+
+[module/battery]
+type = internal/battery
+
+label-charging = Charging %percentage%%
+label-discharging = Discharging %percentage%%
+
+; Use the following command to list batteries and adapters:
+; $ ls -1 /sys/class/power_supply/
+battery = BAT0
+adapter = AC
 
 [settings]
 screenchange-reload = true
