--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -35,6 +35,8 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
+bind-key C-Space copy-mode
+
 # Open panes in current directory
 # Full mode and "standard" mode
 bind-key "\\" split-window -h -c "#{pane_current_path}"
