--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -9,7 +9,7 @@ bind C-Space send-prefix
 
 # Tmux Plugin Manager (Install tmux-plugins)
 # Install using:
-# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+# git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm
 
 # Install plugins using 'ctrl-space I'
 set -g @plugin 'tmux-plugins/tpm'
@@ -47,4 +47,4 @@ bind-key "_" split-window -fv -c "#{pane_current_path}"
 
 bind-key "=" select-layout even-horizontal
 
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
