--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -15,6 +15,9 @@ bind C-Space send-prefix
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# tmux-yank requires a clipboard. See https://github.com/tmux-plugins/tmux-yank?tab=readme-ov-file#linux
+# On Arch, use `yay xsel`
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Start windows and panes at 1, not 0
