--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -27,8 +27,18 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 # Catppuccin Theme (latte, frappe, macchiato, or mocha)
+# See https://github.com/catppuccin/tmux for settings
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'mocha'
+set -g @catppuccin_window_status_style 'rounded'
+
+run '~/.config/tmux/plugins/tmux/catppuccin.tmux'
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
 
 # Set vi-mode
 set-window-option -g mode-keys vi
