--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,7 +1,3 @@
-# format = '''
-# [┌───────────────────](bold green)
-# [│](bold green)$directory$all[└$character](bold green)'''
-
 add_newline = true
 
 # Increase the default command timeout to 2 seconds
@@ -15,8 +11,8 @@ format = """
 $directory\
 ${custom.directory_separator_not_git}\
 ${custom.directory_separator_git}\
-$symbol($git_branch[](fg:green))\
-$symbol($git_commit(fg:green)$git_status$git_metrics$git_state)$fill$cmd_duration$nodejs$all\
+$symbol($git_branch[ ](fg:green))\
+$symbol($git_commit[ ](fg:green))$git_status$git_metrics$git_state$fill$cmd_duration$nodejs$all\
 $character"""
 
 [fill]
@@ -26,19 +22,21 @@ symbol = " "
 truncation_length = 8
 truncation_symbol = '…/'
 truncate_to_repo  = false
-format = "[ﱮ $path$read_only ]($style)"
+format = "[󰉖 $path$read_only ]($style)"
 style = "fg:black bg:mauve"
 read_only = " 󰌾"
 
 [git_branch]
 symbol = " "
-# symbol = " "
 format = "[ $symbol$branch ]($style)"
 style = "fg:black bg:green"
 
 [git_commit]
 format = "[ $hash$tag ]($style)"
 style = "fg:black bg:green"
+
+[git_metrics]
+disabled = false
 
 [custom.directory_separator_git]
 description = "Output a styled separator right after the directory when inside a git repository."
